Cherry-pick r282800. rdar://problem/83955324

ANGLE Metal: single-component swizzles do not compile
    https://bugs.webkit.org/show_bug.cgi?id=230472
    <rdar://problem/83310780>

    Patch by Kimmo Kinnunen <kkinnunen@apple.com> on 2021-09-20
    Reviewed by Dean Jackson.

    Source/ThirdParty/ANGLE:

    Fix metal compiler compile errors when using
    single value swizles (glslvariable.r) in position where lvalues would
    be needed. Use the variable instead of single element array
    (copy-paste typo).

    * src/compiler/translator/TranslatorMetalDirect/ProgramPrelude.cpp:

    LayoutTests:

    Add a test for testing the swizzles as lvalues.

    * webgl/pending/conformance/glsl/misc/swizzle-as-lvalue-expected.txt: Added.
    * webgl/pending/conformance/glsl/misc/swizzle-as-lvalue.html: Added.
    * webgl/pending/resources/webgl_test_files/conformance/glsl/misc/swizzle-as-lvalue.html: Added.
    * webgl/pending/resources/webgl_test_files/resources/glsl-feature-tests.css: Added.

    Canonical link: https://commits.webkit.org/241932@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@282800 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/240672.181@safari-612-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-612-branch@283783 268f45cc-cd09-0410-ab3c-d52691b4dbfc